# qt-transifex

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
qt_transifex/: client.py  logger.py  main.py  parameters.py  translation.py
requirements/: lint.txt  tests.txt
tests/: .gitignore  conftest.py  pytest.ini  test_cli.py  test_parameters.py  test_translation.py
tests/fixtures/: .qt-transifex.toml  pyproject.toml
tests/fixtures/qt_transifex_testing/ui/: dockwidget_base.ui
